# tacos

./: .clang-format  .dockerignore  .gitignore  .gitmodules  CITATION.cff  CMakeLists.txt  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  tacos.sh
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml  question.yml  untriaged.md
.github/workflows/: build-macos.yml  build-ubuntu.yml  check-clang-format.yml  test-macos.yml  test-ubuntu.yml
cmake/: FetchGoogleTest.cmake
helper/: EventQueue.cpp
include/tacos/: AlgorithmStatMonitor.h  AllGather.h  ChakraNode.h  ChakraWriter.h  ChakraWriterLink.h  ChakraWriterNpu.h  Collective.h  EventQueue.h  Hypercube3D.h  LinkUsageTracker.h  Log.h  Mesh2D.h  TacosGreedy.h  TacosNetwork.h  Timer.h  Topology.h  Torus2D.h  Torus3D.h  Typing.h  types.h
include/tacos/collective/: all_gather.h  collective.h
include/tacos/event-queue/: event_queue.h  timer.h
include/tacos/event_queue/: event_queue.h  timer.h
include/tacos/logger/: logger.h  logger.tpp
include/tacos/synthesizer/: TacosGreedy.h  TacosNetwork.h  synthesizer.h  tacos.h  time_expanded_network.h
include/tacos/topology/: Hypercube3D.h  Mesh2D.h  Torus2D.h  Torus3D.h  heteromesh_2d.h  hgx.h  hypercube_3d.h  mesh_2d.h  mesh_2d_hetero.h  topology.h  torus_2d.h  torus_3d.h
include/tacos/writer/: ChakraNode.h  ChakraWriterLink.h  chakra_writer.h  comm_op.h  csv_writer.h  link_result.h  npu_result.h  synthesis_result.h  writer.h  xml_writer.h
runner/: main.cpp
src/: CMakeLists.txt  main.cpp  tacos.cpp
src/collective/: AllGather.cpp  Collective.cpp  all_gather.cpp  collective.cpp
src/event-queue/: event_queue.cpp  timer.cpp
src/event_queue/: event_queue.cpp  timer.cpp
src/helper/: EventQueue.cpp  Timer.cpp
src/include/tacos/: EventQueue.h  Mesh2D.h  TacosGreedy.h  TacosNetwork.h  Timer.h  Torus3D.h
src/logger/: logger.cpp
src/synthesizer/: AlgorithmStatMonitor.cpp  LinkUsageTracker.cpp  TacosGreedy.cpp  TacosNetwork.cpp  synthesizer.cpp  tacos.cpp  time_expanded_network.cpp
src/topology/: Hypercube3D.cpp  Mesh2D.cpp  Topology.cpp  Torus2D.cpp  Torus3D.cpp  heteromesh_2d.cpp  hgx.cpp  hypercube_3d.cpp  mesh_2d.cpp  mesh_2d_hetero.cpp  topology.cpp  torus_2d.cpp  torus_3d.cpp
src/writer/: ChakraWriter.cpp  ChakraWriterLink.cpp  chakra_writer.cpp  comm_op.cpp  csv_writer.cpp  link_result.cpp  npu_result.cpp  synthesis_result.cpp  writer.cpp  xml_writer.cpp
synthesizer/: AlgorithmStatMonitor.cpp  LinkUsageTracker.cpp  TacosGreedy.cpp  TacosNetwork.cpp
tests/: CMakeLists.txt  test_config.h  test_tacos_hypercube_3d.cpp  test_tacos_mesh_2d.cpp  test_tacos_mesh_2d_hetero.cpp  test_tacos_torus_3d.cpp
topology/: Mesh2D.cpp  Topology.cpp  Torus2D.cpp
utils/: build_docker_image.sh  run_clang_format.sh  start_docker_container.sh
writer/: ChakraNode.cpp  ChakraWriter.cpp  ChakraWriterLink.cpp  ChakraWriterNpu.cpp
